format surface_info_mod

--- a/src/libfepx/CMakeLists.txt
+++ b/src/libfepx/CMakeLists.txt
@@ -46,7 +46,7 @@ file(GLOB libfepx_src
     stress_solve_evps_mod.f90
     stress_solve_vp_lag.f90
     surface.f90
-    surf_info.f90
+    surface_info_mod.f90
     tensor_3d_mod.f90
     units.f90
     write_output_mod.f90
