--- a/src/libfepx/CMakeLists.txt
+++ b/src/libfepx/CMakeLists.txt
@@ -26,7 +26,7 @@ file(GLOB libfepx_src
     itstress_vp_lag.f90
     KinematicsModule.f90
     material_mtx_evps_lag.f90
-    material_mtx_vp_lag.f90
+    material_matrix_vp_mod.f90
     read_input_mod.f90
     matrix_operations_mod.f90
     microstructure.f90
