made conjugate_gradient_mod, formatted

--- a/src/libfepx/CMakeLists.txt
+++ b/src/libfepx/CMakeLists.txt
@@ -10,14 +10,14 @@ file(GLOB libfepx_src
     aniso_evps_mod.f90
     aniso_vp_lag.f90
     boundary_conditions_mod.f90
+    conjugate_gradient_mod.f90
     convergence_mod.f90
     crystal_type_mod.f90
     dimensions_mod.f90
-    Dpeff.f90
     driver_iso_vp_mod.f90
-    driver_uniaxial_control_mod.f90
     driver_triaxclr_mod.f90
     driver_triaxcsr_mod.f90
+    driver_uniaxial_control_mod.f90
     driver_utilities_mod.f90
     elemental_variables_utils_mod.f90
     fiber_average_mod.f90
@@ -27,23 +27,22 @@ file(GLOB libfepx_src
     kinematics_mod.f90
     material_matrix_evps_mod.f90
     material_matrix_vp_mod.f90
-    read_input_mod.f90
     matrix_operations_mod.f90
     microstructure.f90
     orientation_conversion_mod.f90
     parallel_matrix_mod.f90
-    pcg_solver.f90
     poly_response_evps_lag.f90
     quadrature.f90
+    read_input_mod.f90
     rstarn_solve_lag.f90
     shape_2d_mod.f90
     shape_3d_mod.f90
-    StiffnessEvpsModule.f90
     stiffness_vp_lag.f90
+    StiffnessEvpsModule.f90
     stress_solve_evps_mod.f90
     stress_solve_vp_lag.f90
-    surface_mod.f90
     surface_info_mod.f90
+    surface_mod.f90
     tensor_3d_mod.f90
     units.f90
     write_output_mod.f90
