format iterate_stress_vp_mod

--- a/src/libfepx/CMakeLists.txt
+++ b/src/libfepx/CMakeLists.txt
@@ -23,7 +23,7 @@ file(GLOB libfepx_src
     fiber_average_mod.f90
     hardening_mod.f90
     itstress_evps_lag.f90
-    itstress_vp_lag.f90
+    iterate_stress_vp_mod.f90
     kinematics_mod.f90
     material_matrix_evps_mod.f90
     material_matrix_vp_mod.f90
